sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 160: Unsupported variable specified
